<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/teal_primary"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin" >

    <android.support.v7.widget.CardView
        android:id="@+id/saksham_nanda_card"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.25"
        android:alpha="0.8"
        app:cardElevation="5.0dip"
        app:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="0.0dip"
                android:layout_height="100.0dip"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:contentDescription="@string/app_name"
                android:padding="6.0dip"
                android:src="@drawable/sakshamnanda" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/saksham_nanda"
                    android:textColor="@color/black"
                    android:textSize="25.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/dev_title_text_view"
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/founder"
                    android:textColor="@color/black"
                    android:textSize="20.0sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/rajat_dhamija_card"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.25"
        android:alpha="0.8"
        app:cardElevation="5.0dip"
        app:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="0.0dip"
                android:layout_height="100.0dip"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:contentDescription="@string/app_name"
                android:padding="6.0dip"
                android:src="@drawable/rajatdhamija" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/dev_subtitle_text_view"
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/rajat_dhamija"
                    android:textColor="@color/black"
                    android:textSize="25.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/android_developer"
                    android:textColor="@color/black"
                    android:textSize="20.0sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:id="@+id/pramod_garg_card"
        android:layout_width="fill_parent"
        android:layout_height="0.0dip"
        android:layout_weight="0.25"
        android:alpha="0.8"
        app:cardElevation="5.0dip"
        app:cardUseCompatPadding="true" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent" >

            <ImageView
                android:layout_width="0.0dip"
                android:layout_height="100.0dip"
                android:layout_gravity="center"
                android:layout_weight="0.3"
                android:contentDescription="@string/app_name"
                android:padding="6.0dip"
                android:src="@drawable/pramodgarg" />

            <LinearLayout
                android:layout_width="0.0dip"
                android:layout_height="fill_parent"
                android:layout_gravity="center"
                android:layout_weight="0.7"
                android:gravity="center"
                android:orientation="vertical" >

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/pramod_garg"
                    android:textColor="@color/black"
                    android:textSize="25.0sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="fill_parent"
                    android:layout_height="0.0dip"
                    android:layout_gravity="center"
                    android:layout_weight="0.5"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/android_developer"
                    android:textColor="@color/black"
                    android:textSize="20.0sp"
                    android:textStyle="italic" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="40.0dip"
        android:layout_marginTop="@dimen/activity_horizontal_margin" >

        <ImageView
            android:id="@+id/fb_image_view"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_fb" />

        <ImageView
            android:id="@+id/tw_image_view"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_tw" />

        <ImageView
            android:id="@+id/insta_image_view"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_insta" />

        <ImageView
            android:id="@+id/gplus_image_view"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_gplus" />

        <ImageView
            android:id="@+id/yt_image_view"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_yt" />

        <ImageView
            android:id="@+id/web_image_view"
            android:layout_width="0.0dip"
            android:layout_height="fill_parent"
            android:layout_weight="1.0"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_web" />
    </LinearLayout>

</LinearLayout>